[gd_scene load_steps=5 format=2]

[ext_resource path="res://LevelMockup.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://tileset.tres" type="TileSet" id=4]

[node name="LevelMockup" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 932, 75 )

[node name="Enemy2" parent="." instance=ExtResource( 3 )]
position = Vector2( 115, 497 )

[node name="GUI" type="Node2D" parent="."]

[node name="PlayerHealth" type="Label" parent="GUI"]
margin_right = 40.0
margin_bottom = 14.0
text = "30"

[node name="WinText" type="Label" parent="GUI"]
visible = false
margin_left = 96.0
margin_top = 199.0
margin_right = 145.0
margin_bottom = 213.0
text = "you win"

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
tile_set = ExtResource( 4 )
cell_size = Vector2( 100, 100 )
collision_use_kinematic = true
format = 1
tile_data = PoolIntArray( -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, 65535, 1, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 1, 0, 131071, 1, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 1, 0, 196607, 1, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 1, 0, 262143, 1, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 1, 0, 327679, 1, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 1, 0, 393215, 1, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 1, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0 )
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="hit" from="Enemy" to="." method="_on_Enemy_hit"]
[connection signal="hit" from="Enemy2" to="." method="_on_Enemy_hit"]
